# calculator-lib

./: Jenkinsfile
cross-compile/: CMakeLists.txt  Dockerfile  build.sh  run.sh
cross-compile/include/: Calculator.h
cross-compile/lib/custom-lib-calculator/: CMakeLists.txt
cross-compile/src/: calculator.cpp
cross-compile/tests/: CMakeLists.txt  test_calculator.cpp
